# torrent_downloader

./: README.md  test_libtorrent.py
.gsd/: ARCHITECTURE.md  AUDIT_REPORT.md  DECISIONS.md  REQUIREMENTS.md  ROADMAP.md  SPEC.md  STACK.md  STATE.md
.gsd/phases/1/: 1-PLAN.md  1-SUMMARY.md  2-PLAN.md  2-SUMMARY.md  RESEARCH.md  VERIFICATION.md
.gsd/phases/2/: 1-PLAN.md  1-SUMMARY.md  2-PLAN.md  2-SUMMARY.md  RESEARCH.md  VERIFICATION.md
.gsd/phases/3/: 1-PLAN.md  1-SUMMARY.md  2-PLAN.md  2-SUMMARY.md  RESEARCH.md  VERIFICATION.md
.gsd/phases/4/: 1-PLAN.md  1-SUMMARY.md  VERIFICATION.md
cinecli/: .gitignore  LICENSE  flake.nix  pyproject.toml  requirements.txt
cinecli/.github/workflows/: api-health.yml
cinecli/cinecli/: __init__.py  api.py  cli.py  config.py  downloader.py  magnets.py  ui.py  utils.py
