[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cinecli"
version = "0.1.2"
description = "🎬 A cross-platform movie browser & torrent launcher CLI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "eyeblech", email = "0x1123@proton.me" }
]

dependencies = [
  "typer>=0.9",
  "rich>=13.0",
  "requests>=2.28",
  "transmission-rpc>=7.0",
  "tomli-w>=1.0",
]

keywords = [
  "cli",
  "movies",
  "torrent",
  "magnet",
  "yts",
  "terminal",
  "python-cli"
]

classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/eyeblech/cinecli"
Repository = "https://github.com/eyeblech/cinecli"
Issues = "https://github.com/eyeblech/cinecli/issues"

[project.scripts]
cinecli = "cinecli.cli:app"
